--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.6.6",
     "nuxt": "^2.4.0",
     "socket.io": "^2.2.0",
     "vue-socket.io": "^3.0.7"
