--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "moment": "^2.29.1",
     "mongoose": "^5.6.6",
     "nuxt": "^2.4.0",
     "socket.io": "^2.2.0",
